--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav {
+  margin: 1rem;
+  width: 90%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.title {
+  display: flex;
+  flex-direction: row;
+  align-items: center; 
+}
+.title img{
+  width: 10%;
+}
+
+.content {
+  width: 95%;
+  display: grid;
+  grid-template-columns: 35% 65%;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 900px) {
+  .content {
+      display: flex;
+      flex-direction: column;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form{
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.form-box{
+  padding: .5em;
+  margin: .5em;
+}
+
+.form button{
+  margin: .3rem;
+}
+
+/* post */
+
+.posts {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.post {  
+  margin-bottom: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post-content{
+  display: grid;
+  grid-template-columns: 60% 40%;
 }
+
+
+.post-image{
+  width: 90%;
+}
+
+.tags {
+  word-wrap: break-word
+}
+
+.post-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
