--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@800&family=Hurricane&family=Kanit:ital,wght@1,600&family=Poppins:ital,wght@0,400;0,800;1,200;1,300;1,600&family=Rubik:wght@600&display=swap');
 .App {
   text-align: center;
   display: flex;
@@ -5,20 +6,40 @@
   justify-content: center;
   align-items: center;
 }
+/* navbar */
 
-.nav {
+.nav-bar {
   margin: 1rem;
   width: 90%;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  align-items: center;
 }
 
 .title {
   display: flex;
   flex-direction: row;
-  align-items: center; 
+  align-items: center;
+  font-family: "Poppins";
 }
 .title img{
-  width: 10%;
+  width: 30%;
 }
+.title h1{
+  text-decoration: none;
+  color: black;
+}
+
+.log {
+  text-align: right;
+  font-family: 'Rubik';
+}
+
+.login {
+  background: gray;
+  border: none;
+}
+/* content */
 
 .content {
   width: 95%;
@@ -54,13 +75,39 @@
 
 .posts {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: center;
   margin-left: 1rem;
 }
 
 .post {  
   margin-bottom: 1rem;
+}
+.post-button{
+  text-align: right;
+}
+
+.post-button button{
+  background: none;
+  border: none;
+}
+
+.post-button button .fa-pen-to-square{
+  color: gray;
+}
+
+.post-button button .fa-pen-to-square:hover{
+  color: rgba(143, 140, 140, 0.611);
+  transform: scale(1.1);
+}
+
+.post-button button .fa-trash{
+  color: #e41700e1;
+}
+
+.post-button button .fa-trash:hover{
+  color: #f44b39;
+  transform: scale(1.1);
 }
 
 .post-content{
@@ -82,5 +129,18 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+.post-footer button{
+  background: none;
+  border: none;
+}
+
+.post-footer button i{
+ color: #F73056;
+}
+
+.post-footer button:hover{
+  transform: scale(1.1);
 }
 
